fix(rux-radio): radio circle alignment

--- a/src/components/rux-radio/rux-radio.scss
+++ b/src/components/rux-radio/rux-radio.scss
@@ -63,6 +63,7 @@
             cursor: pointer;
 
             &:before {
+                box-sizing: border-box;
                 display: flex;
                 flex-shrink: 0;
                 flex-grow: 0;
